# holdmybeer

./: .gitignore  CMakeLists.txt  README.md  base64.cpp  beerbelly.cpp  beerbelly.json  belly.html  curltests.sh  data.json  example.html  holdmybeer.conf  holdmybeer.cpp  holdmybeer.html  holdmybeer.json  holdmybeer.service  settings.json
inc/: ClockSetup.h  base64.h
