cmake_minimum_required (VERSION 2.8)
project(holdmybeer-fcgi)
include_directories("./inc")

set(SOURCES holdmybeer.cpp base64.cpp)
add_executable(holdmybeer-fcgi  ${SOURCES})
add_executable(beerbelly-fcgi beerbelly.cpp base64.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-deprecated-declarations" )
target_link_libraries (holdmybeer-fcgi fcgi fcgi++ crypto)
target_link_libraries (beerbelly-fcgi fcgi fcgi++ crypto)
install(TARGETS holdmybeer-fcgi RUNTIME DESTINATION bin)
install(TARGETS beerbelly-fcgi RUNTIME DESTINATION bin)